force-app/main/default/objects/Calendly_Event_Group__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Record_Types__c</fullName>
        <label>Case Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Types__c</fullName>
        <label>Contact Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Groups__c</fullName>
        <label>Public Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Types__c</fullName>
        <label>SObject Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Calendly Event Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>SObject_Types__c</columns>
        <columns>Case_Record_Types__c</columns>
        <columns>Contact_Record_Types__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendly Event Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>